Convert to static site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 
-		<title>American Gasoline Engines - <?php echo $pageTitle ?></title>
+		<title>American Gasoline Engines - Home</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -31,12 +31,39 @@
 
 				<div id="navWrap">
 
-					<div class="navButton"><a href="index.php">Home</a></div>
-					<div class="navButton"><a href="about.php">About Me</a></div>
-					<div class="navButton"><a href="books.php">Books</a></div>
-					<div class="navButton"><a href="purchase.php">Purchase</a></div>
-					<div class="navButton"><a href="links.php">Links</a></div>
+					<div class="navButton"><a href="/">Home</a></div>
+					<div class="navButton"><a href="/about.html">About Me</a></div>
+					<div class="navButton"><a href="/books.html">Books</a></div>
+					<div class="navButton"><a href="/purchase.html">Purchase</a></div>
+					<div class="navButton"><a href="/links.html">Links</a></div>
 
 				</div>
 
 			</div>
+
+
+			<div id="colWrapRight">
+
+				<div id="bodyWrap">
+
+					<div id="bodyImage">
+
+						<img class="images" src="img/postcard.jpg" />
+
+					</div>
+
+					<div id="caption">
+
+						<p id="caption">Your Number One Source For Books By The Renowned Author: C.H. Wendel</p>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</body>
+
+</html>
